# seqparse

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .isort.cfg  .travis.yml  CHANGES.rst  CHANGES.txt  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  README.rst  bitbucket-pipelines.yml  ci-run_tests  pylint.out  pyproject.toml  requirements.txt  run_tests  run_tests.bat  setup.cfg  setup.py
doc/: Makefile  conf.py  index.rst
doc/source/: modules.rst  seqparse.cli.rst  seqparse.rst  seqparse.test.rst
images/python-2.7/: Dockerfile
python/seqparse/: __init__.py  classes.py  seqparse.py
seqparse/: __init__.py  classes.py  containers.py  files.py  regex.py  seqparse.py  sequences.py
seqparse/cli/: __init__.py  seqls.py
seqparse/test/: __init__.py  ci-run_tests  run_tests  run_tests.bat  test_classes_module.py  test_containers.py  test_file_discovery.py  test_files.py  test_filesequences.py  test_framechunks.py  test_framesequences.py  test_regex.py  test_seqls.py  test_seqparse.py  test_seqparse_module.py
test/: LearningPyth.py  generate_files.py
tests/: ci-run_tests  run_tests  run_tests.bat  test_file_discovery.py
