[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seqparse"
dynamic = ["version"]
description = "A nifty way to parse your file sequences."

classifiers = [
    'Development Status :: 4 - Beta', 'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Text Processing'
]
keywords = ["command-line", "file", "sequence"]

dependencies = ["humanize", "six"]

[project.optional-dependencies]
tests = ["coverage", "pylint", "pytest"]

[project.scripts]
seqls = "seqparse.cli.seqls:run_main"

[tool.setuptools.dynamic]
version = {attr = "seqparse.__version__"}

[tool.isort]
extend_skip = [".json", ".md"]
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true
known_third_party = ["humanize", "pytz", "six"]
multi_line_output = 4
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.yapf]
based_on_style = "google"
coalesce_brackets = true
column_limit = 79
